--- a/src/Components/css/Footer.css
+++ b/src/Components/css/Footer.css
@@ -46,7 +46,7 @@ h3.title {
 
 .info-btn:hover {
     background-color: black;
-    color: blue;
+    color: rgb(247, 84, 52);
 }
 
 
@@ -56,7 +56,7 @@ h3.title {
 }
 
 .offcanvas-header .btn-close {
-    background-color: white;
+    background-color: rgb(247, 84, 52);
     position: absolute;
     right: 8px;
     top: 1px;
