--- a/src/Components/css/Dress.css
+++ b/src/Components/css/Dress.css
@@ -6,11 +6,11 @@
 .mycard {
     margin: auto;
     margin-top: 10px;
-    border: dotted 5px rgb(247, 84, 52);
     position: relative;
     padding-bottom: 60px;
     background-color: white;
     border-radius: 20px;
+    border: 2px solid black;
 }
 
 .buy {
@@ -30,10 +30,10 @@
     padding-bottom: 10px;
     word-wrap: break-word;
     position: relative;
-    border-radius: 200px;
-    border: 1px solid rgb(247, 84, 52);
-    margin-bottom: 10px;
-    box-shadow: -5px 5px black;
+    border-radius: 2px;
+    margin-bottom: 20px;
+    /*box-shadow: -6px 4px rgb(0, 0, 0, 0.5);*/
+    background-color: white;
 }
 
 .send-comment {
@@ -73,7 +73,7 @@
     --bs-pagination-border-color: #dee2e6;
     --bs-pagination-border-radius: 0.375rem;
 
-    --bs-pagination-focus-color:  black;
+    --bs-pagination-focus-color: black;
     --bs-pagination-focus-bg: #fff;
     --bs-pagination-focus-box-shadow: none;
     --bs-pagination-active-color: white;
@@ -115,6 +115,7 @@
 .btn-dress {
     background-color: rgb(247, 84, 52);
     border-color: black;
+    color: white;
 }
 
 .btn-dress:hover {
@@ -122,10 +123,3 @@
     border-color: rgb(247, 84, 52);
 }
 
-.comment:nth-child(odd) {
-    background-color: white;
-}
-
-.comment:nth-child(even) {
-    background-color: lightsalmon;
-}
