--- a/src/Components/css/About.css
+++ b/src/Components/css/About.css
@@ -1,52 +1,115 @@
-.about {
-    color: black;
-    font-size: 3em;
+.load-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    z-index: 6;
+    pointer-events: none;
+    background-color: black;
+    opacity: 1;
 }
 
-.about > p {
-    line-height: 1em;
-    font-style: italic;
+.load-screen {
+    position: relative;
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    background-color: black;
+    width: 0%;
+    height: 100%;
 }
 
-.about > h1 {
-    color: white;
+.load-logo-empty {
+    display: inline;
+    position: absolute;
+    opacity: 0;
+    width: 30%;
+    margin-left: 10%;
+    margin-top: 5%;
+    max-width: 600px;
+}
+
+.load-logo-square {
+    display: inline;
+    position: absolute;
+    opacity: 0;
+    width: 10%;
+    margin-left: 85%;
+    margin-top: 15.2%;
+    max-width: 200px;
+}
+
+.load-title {
     text-align: center;
-    text-shadow: -3px 3px rgba(247, 84, 52, 0.8);
+    opacity: 0;
+    color: black;
+    font-size: 10vw;
+    text-shadow: 0.5vw -0.5vw rgba(247, 84, 52, 0.4);
 }
 
-.about > .intro {
-    margin-top: 30px;
-    display: block;
-    border: 5px solid rgba(247, 84, 52, 1);
-    max-width: 500px;
-    float: left;
-    clear: right;
-    background-color: white;
-    padding: 1em;
+.info-container {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    z-index: 5;
+    background-color: rgba(247, 84, 52, 1);
 }
 
-.about > .description {
-    margin-top: 30px;
-    display: block;
-    border: 5px solid rgba(247, 84, 52, 1);
-    float: right;
-    clear: left;
-    max-width: 900px;
-    margin-bottom: 80px;
-    background-color: white;
-    padding: 1em;
+.next {
+    position: absolute;
+    top: 45%;
+    right: 20px;
+    font-size: 20vw;
+    color: white;
+    padding: 0;
+    line-height: 0;
 }
 
-@media (max-width: 930px) {
-    .about {
-        font-size: 2em;
-    }
+.next:hover, .prev:hover {
+    cursor: pointer;
+    color: rgba(247, 84, 52, 1);
+}
 
-    .about > .intro {
-        max-width: 300px;
-    }
+.prev {
+    position: absolute;
+    top: 45%;
+    padding: 0;
+    left: 20px;
+    font-size: 20vw;
+    color: white;
+    line-height: 0;
+}
 
-    .about > .description {
-        max-width: 500px;
-    }
+.info-content {
+    height: 100vh;
+    width: 100vw;
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-bottom: 80px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+}
+
+.info-content-text {
+    text-align: center;
+    vertical-align: middle;
+    color: white;
+    font-size: 5vw;
+    z-index: 10;
+    opacity: 0;
+}
+
+.info-shop {
+    color: white;
+    text-decoration: none;
+}
+
+.info-shop:hover {
+    color: rgba(247, 84, 52, 1);
 }
