--- a/src/Components/css/Menu.css
+++ b/src/Components/css/Menu.css
@@ -1,6 +1,8 @@
 body {
     /*background-color: #fadbc8;*/
     /*background-color: papayawhip;*/
-    background-color: #FFF5EE;
+    /*background-color: #FFF5EE;*/
+    background-color: white;
 }
+
 
