--- a/src/Components/css/About.css
+++ b/src/Components/css/About.css
@@ -5,8 +5,8 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    z-index: 6;
     pointer-events: none;
+    z-index: 6;
     background-color: black;
     opacity: 1;
 }
@@ -112,4 +112,23 @@
 
 .info-shop:hover {
     color: rgba(247, 84, 52, 1);
+}
+
+.skip {
+    pointer-events: initial;
+    background-color: black;
+    color: white;
+    position: absolute;
+    bottom: 60px;
+    left: 45%;
+    width: 300px;
+    height: 50px;
+    z-index: 100;
+    border-color: white;
+}
+
+.skip:hover {
+    color: rgba(247, 84, 52, 1);
+    background-color: white;
+    border-color: rgba(247, 84, 52, 1);
 }
